added alt descriptions

--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
         <!-- Mixed mobile and desktop grid system to create a dynamic and flexible layout. -->
         
             <div class="graphics">
-                <div class=""><img class="img-fluid" src="images/gif-image2.gif" alt="" height=300px></div>
-                <div class=""><img class="img-fluid" src="images/gif-image2.gif" alt="" height=300px></div>
-                <div class=""><img class="img-fluid" src="images/gif-image2.gif" alt="" height=300px></div>
+                <div class=""><img class="img-fluid" src="images/gif-image2.gif" alt="windows 95 display" height=300px></div>
+                <div class=""><img class="img-fluid" src="images/gif-image2.gif" alt="windows 95 display" height=300px></div>
+                <div class=""><img class="img-fluid" src="images/gif-image2.gif" alt="windows 95 display" height=300px></div>
             </div>
             <div class="content">
                 <p class="text">Vaporwave is a microgenre of electronic music and an Internet meme that emerged in the early 2010s. The style is defined by its appropriation of 1980s and 1990s mood music styles such as smooth jazz, elevator music, R&B, and lounge music, typically sampling or manipulating tracks via chopped and screwed techniques and other effects. Its surrounding subculture is sometimes associated with an ambiguous or satirical take on consumer capitalism and popular culture, and tends to be characterized by a nostalgic or surrealist engagement with the popular entertainment, technology and advertising of previous decades. It also incorporates early Internet imagery, late 1990s web design, glitch art, anime, 3D-rendered objects, and cyberpunk tropes in its cover artwork and music videos.</p>
@@ -162,8 +162,8 @@
                 <p class="text">Originating as an ironic variant of chillwave, vaporwave was loosely derived from the experimental tendencies of the mid-2000s hypnagogic pop scene. The style was pioneered by producers such as James Ferraro, Daniel Lopatin, and Ramona Xavier under various pseudonyms. A circle of online producers were particularly inspired by Xavier's Floral Shoppe (2011), which established a blueprint for the genre. The movement subsequently built an audience on sites Last.fm, Reddit, and 4chan while a flood of new acts, many operating under online pseudonyms, turned to Bandcamp for distribution. Following the wider exposure of vaporwave in 2012, a wealth of subgenres and offshoots emerged, such as future funk, mallsoft, and hardvapour.</p>
             </div>
             <div class="gifs">
-                <img src="images/gif-image3.gif" alt="" class="img-fluid" width=400px>
-                <img src="images/gif-image4.gif" alt="" class="img-fluid" width=400px>
+                <img src="images/gif-image3.gif" alt="dolphin gun" class="img-fluid" width=400px>
+                <img src="images/gif-image4.gif" alt="statue" class="img-fluid" width=400px>
             </div>
             <div class="content">
                 <p class="text">Building on the experimental and ironic tendencies of genres such as chillwave and hypnagogic pop, vaporwave is an Internet-based microgenre that draws primarily on musical and cultural sources from the 1980s and early 1990s, while also being associated with an ambiguous or satirical take on consumer capitalism and technoculture. Early incarnations of vaporwave relied on the sampling of sources such as smooth jazz, retro elevator music, R&B, lounge music, and dance music from the 1980s and 1990s, with the music made of "brief, cut-up sketches", cleanly produced, and composed almost entirely from samples, along with the application of slowed-down chopped and screwed techniques, looping, and other effects. Critic Adam Trainer notes the style's predilection for "music made less for enjoyment than for the regulation of mood," such as corporate stock music for infomercials and product demonstrations. Writer Adam Harper described the typical vaporwave track as "a wholly synthesised or heavily processed chunk of corporate mood music, bright and earnest or slow and sultry, often beautiful, either looped out of sync and beyond the point of functionality."</p>
@@ -204,7 +204,7 @@
                 </div>
             </div>      
             <div class="hero">
-                <img class="img-fluid" src="images/image.jpg" alt="" width=90%>
+                <img class="img-fluid" src="images/image.jpg" alt="neon lights" width=90%>
                 <a href="#">世界 c r u e l w o r l d 世界</a>
             </div>
 
