cleaned up code

--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
         <!-- Mixed mobile and desktop grid system to create a dynamic and flexible layout. -->
         
             <div class="graphics">
-                <div class=""><img class="img-fluid" src="images/gif-image2.gif" alt="windows 95 display" height=300px></div>
-                <div class=""><img class="img-fluid" src="images/gif-image2.gif" alt="windows 95 display" height=300px></div>
-                <div class=""><img class="img-fluid" src="images/gif-image2.gif" alt="windows 95 display" height=300px></div>
+                <div><img class="img-fluid" src="images/gif-image2.gif" alt="windows 95 display" height=300px></div>
+                <div><img class="img-fluid" src="images/gif-image2.gif" alt="windows 95 display" height=300px></div>
+                <div><img class="img-fluid" src="images/gif-image2.gif" alt="windows 95 display" height=300px></div>
             </div>
             <div class="content">
                 <p class="text">Vaporwave is a microgenre of electronic music and an Internet meme that emerged in the early 2010s. The style is defined by its appropriation of 1980s and 1990s mood music styles such as smooth jazz, elevator music, R&B, and lounge music, typically sampling or manipulating tracks via chopped and screwed techniques and other effects. Its surrounding subculture is sometimes associated with an ambiguous or satirical take on consumer capitalism and popular culture, and tends to be characterized by a nostalgic or surrealist engagement with the popular entertainment, technology and advertising of previous decades. It also incorporates early Internet imagery, late 1990s web design, glitch art, anime, 3D-rendered objects, and cyberpunk tropes in its cover artwork and music videos.</p>
