--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 <div class="visuals col-lg-6 col-sm-8">
                     <h2>visuals</h2>
                     <div class="embed-responsive embed-responsive-4by3">
-                        <iframe class="embed-responsive-item" style="max-width:500px; max-height: 315px;" src="https://www.youtube.com/embed/0gtfDg0f0VQ"></iframe>
+                        <iframe class="embed-responsive-item" style="max-width:500px; max-height: 315px;" src="http://www.youtube.com/embed/0gtfDg0f0VQ"></iframe>
                     </div>
                 </div>
                 <div class="artists col-lg-6 col-sm-4">
